# deep-learning-math-skills

./: README.md  notbook_test.ipynb
.ipynb_checkpoints/: README-checkpoint.md
deep-learning-math-skills/: pyproject.toml
deep-learning-math-skills/Notebooks/: Dummy Notebook.ipynb
deep-learning-math-skills/Notebooks/.ipynb_checkpoints/: Dummy Notebook-checkpoint.ipynb
deep-learning-math-skills/tests/: test_deep_learning_math_skills.py
