[tool.poetry]
name = "deep-learning-math-skills"
version = "0.1.0"
description = ""
authors = ["Yuri Lisboa <yurilisboadasilva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.3.3"
seaborn = "^0.11.1"
numpy = "^1.19.5"
pandas = "^1.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
